# file-manager

./: .gitignore  LICENSE.md  README.md  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/directoryListing/: DirectoryListing.module.scss  DirectoryListing.tsx
src/components/directoryListing/directoryListingItem/: DirectoryListingItem.module.scss  DirectoryListingItem.tsx
src/pages/homePage/: HomePage.module.scss  HomePage.tsx
