[package]
name = "file-manager"
version = "0.0.0"
description = "A simple file manager writte in Rust"
authors = ["FrozenAssassine", "Phill030"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = ["shell-open"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
